Fixed overflow

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,6 +9,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: black;
     color: white;
     font-family: "Dina", "tahoma"; 
 }
@@ -23,15 +24,10 @@ a:hover{
     opacity: 0.5;
 }
 
-footer {
-    bottom: 0;
-    position: fixed; 
-    margin: 0 auto; margin-left: auto; margin-right: auto;
-}
-
 .heading {
     position: absolute;
     width: 100%;
+    top: 20%;
     text-align: center; 
 }
 .heading h1 {
@@ -51,7 +47,9 @@ footer {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100%; 
+    height: 100vh; 
+    overflow: hidden;
+
 
 }
 
